# Intelation

./: .gitignore  READEME.md  README.md
UI/: package-lock.json
UI/src/: App.tsx  index.css
UI/src/components/: SealEvaluator.tsx
my/: CMakeLists.txt  add.cpp  main.cpp  operations.cpp  ops.cpp  server.js  subtract.cpp
